--- a/public/templates/app.json
+++ b/public/templates/app.json
@@ -12,35 +12,36 @@
 		"upload": ""
 	},
 	"components": {
+		"gap": "https://uibuilder.totaljs.com/components/gap/editor.html",
 		"callout": "https://uibuilder.totaljs.com/components/callout/editor.html",
-		"headline": "https://uibuilder.totaljs.com/components/headline/editor.html",
-		"enable": "https://uibuilder.totaljs.com/components/enable/editor.html",
-		"columns": "https://uibuilder.totaljs.com/components/columns/editor.html",
-		"video": "https://uibuilder.totaljs.com/components/video/editor.html",
-		"counter": "https://uibuilder.totaljs.com/components/counter/editor.html",
-		"container": "https://uibuilder.totaljs.com/components/container/editor.html",
 		"cards": "https://uibuilder.totaljs.com/components/cards/editor.html",
-		"form": "https://uibuilder.totaljs.com/components/form/editor.html",
-		"show": "https://uibuilder.totaljs.com/components/show/editor.html",
+		"checkbox": "https://uibuilder.totaljs.com/components/checkbox/editor.html",
+		"checkboxlist": "https://uibuilder.totaljs.com/components/checkboxlist/editor.html",
+		"color": "https://uibuilder.totaljs.com/components/color/editor.html",
+		"columns": "https://uibuilder.totaljs.com/components/columns/editor.html",
+		"comment": "https://uibuilder.totaljs.com/components/comment/editor.html",
+		"container": "https://uibuilder.totaljs.com/components/container/editor.html",
+		"counter": "https://uibuilder.totaljs.com/components/counter/editor.html",
 		"datagenerator": "https://uibuilder.totaljs.com/components/datagenerator/editor.html",
+		"datagrid": "https://uibuilder.totaljs.com/components/datagrid/editor.html",
 		"datareader": "https://uibuilder.totaljs.com/components/datareader/editor.html",
 		"datasource": "https://uibuilder.totaljs.com/components/datasource/editor.html",
-		"datagrid": "https://uibuilder.totaljs.com/components/datagrid/editor.html",
+		"enable": "https://uibuilder.totaljs.com/components/enable/editor.html",
+		"fileuploader": "https://uibuilder.totaljs.com/components/fileuploader/editor.html",
+		"form": "https://uibuilder.totaljs.com/components/form/editor.html",
+		"headline": "https://uibuilder.totaljs.com/components/headline/editor.html",
+		"hr": "https://uibuilder.totaljs.com/components/hr/editor.html",
+		"icon": "https://uibuilder.totaljs.com/components/icon/editor.html",
+		"image": "https://uibuilder.totaljs.com/components/image/editor.html",
+		"infocard": "https://uibuilder.totaljs.com/components/infocard/editor.html",
 		"paragraph": "https://uibuilder.totaljs.com/components/paragraph/editor.html",
 		"sendtoinput": "https://uibuilder.totaljs.com/components/sendtoinput/editor.html",
-		"comment": "https://uibuilder.totaljs.com/components/comment/editor.html",
-		"hr": "https://uibuilder.totaljs.com/components/hr/editor.html",
+		"show": "https://uibuilder.totaljs.com/components/show/editor.html",
 		"sound": "https://uibuilder.totaljs.com/components/sound/editor.html",
-		"image": "https://uibuilder.totaljs.com/components/image/editor.html",
-		"checkbox": "https://uibuilder.totaljs.com/components/checkbox/editor.html",
-		"textbox": "https://uibuilder.totaljs.com/components/textbox/editor.html",
-		"textarea": "https://uibuilder.totaljs.com/components/textarea/editor.html",
-		"icon": "https://uibuilder.totaljs.com/components/icon/editor.html",
-		"color": "https://uibuilder.totaljs.com/components/color/editor.html",
 		"tabs": "https://uibuilder.totaljs.com/components/tabs/editor.html",
-		"checkboxlist": "https://uibuilder.totaljs.com/components/checkboxlist/editor.html",
-		"infocard": "https://uibuilder.totaljs.com/components/infocard/editor.html",
-		"barchart": "https://uibuilder.totaljs.com/components/barchart/editor.html"
+		"textarea": "https://uibuilder.totaljs.com/components/textarea/editor.html",
+		"textbox": "https://uibuilder.totaljs.com/components/textbox/editor.html",
+		"video": "https://uibuilder.totaljs.com/components/video/editor.html"
 	},
 	"children": [
 		[
