--- a/public/templates/app.json
+++ b/public/templates/app.json
@@ -12,37 +12,37 @@
 		"upload": ""
 	},
 	"components": {
-		"gap": "https://uibuilder.totaljs.com/components/gap/editor.html",
-		"callout": "https://uibuilder.totaljs.com/components/callout/editor.html",
-		"cards": "https://uibuilder.totaljs.com/components/cards/editor.html",
-		"checkbox": "https://uibuilder.totaljs.com/components/checkbox/editor.html",
-		"checkboxlist": "https://uibuilder.totaljs.com/components/checkboxlist/editor.html",
-		"color": "https://uibuilder.totaljs.com/components/color/editor.html",
-		"columns": "https://uibuilder.totaljs.com/components/columns/editor.html",
-		"comment": "https://uibuilder.totaljs.com/components/comment/editor.html",
-		"container": "https://uibuilder.totaljs.com/components/container/editor.html",
-		"counter": "https://uibuilder.totaljs.com/components/counter/editor.html",
-		"readvalue": "https://uibuilder.totaljs.com/components/readvalue/editor.html",
-		"datagenerator": "https://uibuilder.totaljs.com/components/datagenerator/editor.html",
-		"datagrid": "https://uibuilder.totaljs.com/components/datagrid/editor.html",
-		"datareader": "https://uibuilder.totaljs.com/components/datareader/editor.html",
-		"datasource": "https://uibuilder.totaljs.com/components/datasource/editor.html",
-		"enable": "https://uibuilder.totaljs.com/components/enable/editor.html",
-		"fileuploader": "https://uibuilder.totaljs.com/components/fileuploader/editor.html",
-		"form": "https://uibuilder.totaljs.com/components/form/editor.html",
-		"headline": "https://uibuilder.totaljs.com/components/headline/editor.html",
-		"hr": "https://uibuilder.totaljs.com/components/hr/editor.html",
-		"icon": "https://uibuilder.totaljs.com/components/icon/editor.html",
-		"image": "https://uibuilder.totaljs.com/components/image/editor.html",
-		"infocard": "https://uibuilder.totaljs.com/components/infocard/editor.html",
-		"paragraph": "https://uibuilder.totaljs.com/components/paragraph/editor.html",
-		"sendtoinput": "https://uibuilder.totaljs.com/components/sendtoinput/editor.html",
-		"show": "https://uibuilder.totaljs.com/components/show/editor.html",
-		"sound": "https://uibuilder.totaljs.com/components/sound/editor.html",
-		"tabs": "https://uibuilder.totaljs.com/components/tabs/editor.html",
-		"textarea": "https://uibuilder.totaljs.com/components/textarea/editor.html",
-		"textbox": "https://uibuilder.totaljs.com/components/textbox/editor.html",
-		"video": "https://uibuilder.totaljs.com/components/video/editor.html"
+		"gap": "https://cdn.componentator.com/uibuilder/gap-v1/editor.html",
+		"callout": "https://cdn.componentator.com/uibuilder/callout-v1/editor.html",
+		"cards": "https://cdn.componentator.com/uibuilder/cards-v1/editor.html",
+		"checkbox": "https://cdn.componentator.com/uibuilder/checkbox-v1/editor.html",
+		"checkboxlist": "https://cdn.componentator.com/uibuilder/checkboxlist-v1/editor.html",
+		"color": "https://cdn.componentator.com/uibuilder/color-v1/editor.html",
+		"columns": "https://cdn.componentator.com/uibuilder/columns-v1/editor.html",
+		"comment": "https://cdn.componentator.com/uibuilder/comment-v1/editor.html",
+		"container": "https://cdn.componentator.com/uibuilder/container-v1/editor.html",
+		"counter": "https://cdn.componentator.com/uibuilder/counter-v1/editor.html",
+		"readvalue": "https://cdn.componentator.com/uibuilder/readvalue-v1/editor.html",
+		"datagenerator": "https://cdn.componentator.com/uibuilder/datagenerator-v1/editor.html",
+		"datagrid": "https://cdn.componentator.com/uibuilder/datagrid-v1/editor.html",
+		"datareader": "https://cdn.componentator.com/uibuilder/datareader-v1/editor.html",
+		"datasource": "https://cdn.componentator.com/uibuilder/datasource-v1/editor.html",
+		"enable": "https://cdn.componentator.com/uibuilder/enable-v1/editor.html",
+		"fileuploader": "https://cdn.componentator.com/uibuilder/fileuploader-v1/editor.html",
+		"form": "https://cdn.componentator.com/uibuilder/form-v1/editor.html",
+		"headline": "https://cdn.componentator.com/uibuilder/headline-v1/editor.html",
+		"hr": "https://cdn.componentator.com/uibuilder/hr-v1/editor.html",
+		"icon": "https://cdn.componentator.com/uibuilder/icon-v1/editor.html",
+		"image": "https://cdn.componentator.com/uibuilder/image-v1/editor.html",
+		"infocard": "https://cdn.componentator.com/uibuilder/infocard-v1/editor.html",
+		"paragraph": "https://cdn.componentator.com/uibuilder/paragraph-v1/editor.html",
+		"sendtoinput": "https://cdn.componentator.com/uibuilder/sendtoinput-v1/editor.html",
+		"show": "https://cdn.componentator.com/uibuilder/show-v1/editor.html",
+		"sound": "https://cdn.componentator.com/uibuilder/sound-v1/editor.html",
+		"tabs": "https://cdn.componentator.com/uibuilder/tabs-v1/editor.html",
+		"textarea": "https://cdn.componentator.com/uibuilder/textarea-v1/editor.html",
+		"textbox": "https://cdn.componentator.com/uibuilder/textbox-v1/editor.html",
+		"video": "https://cdn.componentator.com/uibuilder/video-v1/editor.html"
 	},
 	"children": [
 		[
