Fixed NPM module.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
       "url": "https://github.com/totaljs/uibuilder"
   },
   "dependencies": {
-    "total4": "latest"
+    "total5": "beta"
   },
   "scripts": {
     "start": "node index.js 8000"
